--- a/.travis.yml
+++ b/.travis.yml
@@ -18,17 +18,16 @@ android:
     - tools
     - build-tools-27.0.3
     - android-27
+    - android-19
 
     # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-
-    - addon-google_apis-google-27
+    - add-on
+    - extra
 
     - sys-img-armeabi-v7a-android-27
 
 before_install:
+    - yes | sdkmanager "platforms;android-27"
     - chmod +x gradlew
 before_script:
     - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
