--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
-sudo: false
+sudo: required
+dist: trusty
+group: edge
+
 language: android
 jdk: oraclejdk8
 
@@ -18,22 +21,22 @@ android:
     - tools
     - build-tools-27.0.3
     - android-27
-    - android-19
 
     # Additional components
     - add-on
     - extra
 
-    - sys-img-armeabi-v7a-android-27
+    - sys-img-armeabi-v7a-android-22
 
 before_install:
     - yes | sdkmanager "platforms;android-27"
     - chmod +x gradlew
+    
 before_script:
-    - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
-    - emulator -avd test -no-skin -no-audio -no-window &
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 &
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
 script:
     - ./gradlew clean
