Checking what gradle check does might want to tone it down but I want all tests running

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,5 +38,4 @@ before_script:
 
 script:
     - ./gradlew clean
-    - ./gradlew assembleDebug
-    - ./gradlew assembleDebugAndroidTest
+    - ./gradlew check
