Added code cov stats

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,6 @@ sudo: required
 language: android
 jdk: oraclejdk8
 
-addons:
-  apt:
-    packages:
-      - lynx
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -35,6 +31,7 @@ android:
 before_install:
     - yes | sdkmanager "platforms;android-27"
     - chmod +x gradlew
+    - pip install --user codecov
 before_script:
     - ./gradlew clean
     - ./gradlew assembleDebug assembleDebugAndroidTest
@@ -43,8 +40,11 @@ before_script:
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
 
-script:
-    - ./gradlew check
 
-after_failure:
-  - if [ -f /home/travis/build/iceColdChris/MealPicker/app/build/reports/lint-results.html ]; then lynx -dump /home/travis/build/iceColdChris/MealPicker/app/build/reports/lint-results.html; fi
+script:
+    - ./gradlew connectedCheck -PdisablePreDex --stacktrace
+
+after_success:
+    - codecov                       #Run codecov
+
+after_failure: "cat $TRAVIS_BUILD_DIR/app/build/outputs/lint-results-debug.xml"
