Got a much cleaner implementation of a dagger object working good

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,19 +54,20 @@ dependencies {
     implementation "com.google.dagger:dagger:$daggerVersion"
     implementation "com.google.dagger:dagger-android-support:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+    kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
 
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
 
-    implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
-    implementation "com.squareup.moshi:moshi:$moshiVersion"
-
-    kapt "com.ryanharter.auto.value:auto-value-moshi:$autoValueMoshiVersion"
-    compileOnly "com.ryanharter.auto.value:auto-value-moshi-annotations:$autoValueMoshiVersion"
+    implementation 'com.google.code.gson:gson:2.8.1'
 
     annotationProcessor "com.google.auto.value:auto-value:$autoValueVersion"
     kapt "com.google.auto.value:auto-value:$autoValueVersion"
     compileOnly "com.google.auto.value:auto-value:$autoValueVersion"
+
+    implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
 
     implementation "io.reactivex.rxjava2:rxkotlin:$rxKotlinVersion"
     implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
