--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ ext {
     supportLibraryVersion = '27.1.0'
     daggerVersion = '2.14.1'
     retrofitVersion = '2.3.0'
-    moshiVersion = '1.5.0'
+    okHttpVersion = '3.10.0'
     autoValueVersion = '1.5.1'
     autoValueMoshiVersion = '0.4.3'
     rxJavaVersion = '2.1.9'
