--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.github.kt3k.coveralls'
-
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 27
@@ -17,6 +17,10 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        buildTypes.each {
+            it.buildConfigField("String", "GoogleSecAPIKEY", GoogleAPIKey)
+        }
+
         debug {
             testCoverageEnabled = true
         }
@@ -37,6 +41,8 @@ dependencies {
     implementation "com.android.support:support-v4:$supportLibraryVersion"
     implementation "com.android.support:support-media-compat:$supportLibraryVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') { transitive = true }
 
     implementation "com.google.android.gms:play-services-maps:$googlePlayServicesVersion"
     implementation "com.google.android.gms:play-services-places:$googlePlayServicesVersion"
