--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,13 @@ buildscript {
         google()
         jcenter()
         maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.1'
+        classpath 'io.fabric.tools:gradle:1.+'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -24,6 +26,8 @@ allprojects {
         maven {
             url "http://dl.bintray.com/jaimiew/whijai"
         }
+        maven { url 'https://maven.fabric.io/public' }
+
     }
 }
 
